# rca-scenario-runner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-and-deploy.sh  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py  models.py  runner.py  scenarios.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ExecutionPanel.tsx  Hero.tsx  HistoryTable.tsx  Icon.tsx  LogViewer.tsx  Pill.tsx  ScenarioCard.tsx  StatusBadge.tsx  Toast.tsx  TopBar.tsx
frontend/src/hooks/: useActiveRun.ts  useHealth.ts  useRunner.ts  useScenarios.ts
frontend/src/lib/: clipboard.ts  format.ts  parseLog.ts  tones.ts
scenarios/: README.md
scenarios/services/food-delivery/: service-spec.yaml
scenarios/services/food-delivery/scripts/: scenario-01-orders-lock.sh  scenario-01-restaurant-closed-storm.sh  scenario-02-courier-pool-exhaustion.sh  scenario-02-payments-pgmock-timeout.sh  scenario-03-db-cpu-throttle.sh  scenario-03-menu-availability-flapping.sh  scenario-04-lunch-rush-region-hotspot.sh  scenario-04-traffic-flood.sh
scenarios/services/plopvape-shop/: service-spec.yaml
scenarios/services/plopvape-shop/scripts/: scenario-01-inventory-lock.sh  scenario-02-payment-timeout.sh  scenario-03-db-cpu-throttle.sh  scenario-04-traffic-flood.sh
scenarios/services/social-feed/: service-spec.yaml
scenarios/services/social-feed/scripts/: scenario-01-feed-entries-lock.sh  (+3 more)
